--- a/requirements.txt
+++ b/requirements.txt
@@ -18,13 +18,16 @@ openai==1.46.0
 PyAudio==0.2.14
 pydantic==2.9.2
 pydantic_core==2.23.4
+pydub==0.25.1
 pygame==2.6.0
 python-dotenv==1.0.1
+regex==2024.9.11
 requests==2.32.3
 sniffio==1.3.1
 soupsieve==2.6
 SpeechRecognition==3.10.4
 tenacity==9.0.0
+tiktoken==0.7.0
 tqdm==4.66.5
 typing_extensions==4.12.2
 urllib3==2.2.3
