--- a/requirements.txt
+++ b/requirements.txt
@@ -5,9 +5,11 @@ beautifulsoup4==4.12.3
 bs4==0.0.2
 cachetools==5.5.0
 certifi==2024.8.30
+cffi==1.17.1
 charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
+cryptography==43.0.1
 distro==1.9.0
 exceptiongroup==1.2.2
 google-api-core==2.20.0
@@ -30,6 +32,7 @@ protobuf==5.28.2
 pyasn1==0.6.1
 pyasn1_modules==0.4.1
 PyAudio==0.2.14
+pycparser==2.22
 pydantic==2.9.2
 pydantic_core==2.23.4
 pydub==0.25.1
@@ -47,6 +50,7 @@ SpeechRecognition==3.10.4
 spotipy==2.24.0
 tenacity==9.0.0
 tiktoken==0.7.0
+tinytuya==1.15.1
 tqdm==4.66.5
 typing_extensions==4.12.2
 uritemplate==4.1.1
