--- a/requirements.txt
+++ b/requirements.txt
@@ -1,61 +1,15 @@
-annotated-types==0.7.0
-anyio==4.5.0
-arcade==2.6.17
-async-timeout==4.0.3
-attrs==24.2.0
 beautifulsoup4==4.12.3
-bs4==0.0.2
-cachetools==5.5.0
-certifi==2024.8.30
-cffi==1.17.1
-charset-normalizer==3.3.2
-click==8.1.7
-colorama==0.4.6
-cryptography==43.0.1
-distro==1.9.0
-exceptiongroup==1.2.2
-google-api-core==2.20.0
-google-api-python-client==2.147.0
-google-auth==2.35.0
-google-auth-httplib2==0.2.0
-google-auth-oauthlib==1.2.1
-googleapis-common-protos==1.65.0
+google_api_python_client==2.147.0
+google_auth_oauthlib==1.2.1
 gTTS==2.5.3
-h11==0.14.0
-httpcore==1.0.5
-httplib2==0.22.0
-httpx==0.27.2
-idna==3.10
-jiter==0.5.0
-oauthlib==3.2.2
-openai==1.46.0
-Pillow==9.3.0
-proto-plus==1.24.0
+openai==1.51.2
 protobuf==5.28.2
-pyasn1==0.6.1
-pyasn1_modules==0.4.1
-PyAudio==0.2.14
-pycparser==2.22
-pydantic==2.9.2
-pydantic_core==2.23.4
-pyglet==2.0.dev23
-pymunk==6.4.0
-pyparsing==3.1.4
+psutil==6.0.0
 python-dotenv==1.0.1
-pytiled-parser==2.2.0
-redis==5.1.0
-regex==2024.9.11
-requests==2.32.3
-requests-oauthlib==2.0.0
-rsa==4.9
-sniffio==1.3.1
-soupsieve==2.6
+pywhatkit==5.4
+Requests==2.32.3
 SpeechRecognition==3.10.4
 spotipy==2.24.0
 tenacity==9.0.0
 tiktoken==0.7.0
 tinytuya==1.15.1
-tqdm==4.66.5
-typing_extensions==4.12.2
-uritemplate==4.1.1
-urllib3==2.2.3
